force-app/main/default/objects/DD_Policy_Coverage__c/DD_Policy_Coverage__c.object-meta.xml
<CustomObject>
    <description>Frozen coverage details from quote. Immutable after bind.</description>
    <label>Policy Coverage</label>
    <nameField><displayFormat>PC-{000000}</displayFormat><label>Coverage ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Policy Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>