force-app/main/default/objects/DD_Policy_Coverage__c/fields/Coinsurance_PPO__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance_PPO__c</fullName>
    <label>Coinsurance PPO</label>
    <type>Percent</type>
    <precision>5</precision><scale>0</scale><required>false</required>
    <description>Frozen coinsurance at PPO dentists</description>
</CustomField>