force-app/main/default/objects/DD_Policy_Coverage__c/fields/Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Name__c</fullName>
    <label>Coverage Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>