force-app/main/default/objects/DD_Policy_Coverage__c/fields/Coverage_Spec__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Spec__c</fullName>
    <label>Coverage Spec</label>
    <type>Lookup</type>
    <referenceTo>DD_Coverage_Spec__c</referenceTo><relationshipLabel>Policy Coverages</relationshipLabel><relationshipName>Policy_Covs</relationshipName><required>false</required>
    <description>Master coverage spec reference</description>
</CustomField>