force-app/main/default/objects/DD_Policy_Coverage__c/fields/Deductible_Applies__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Applies__c</fullName>
    <label>Deductible Applies</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Frozen deductible flag</description>
</CustomField>