force-app/main/default/objects/DD_Policy_Coverage__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>MasterDetail</type>
    <referenceTo>DD_Policy__c</referenceTo><relationshipLabel>Policy Coverages</relationshipLabel><relationshipName>Policy_Coverages</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><writeRequiresMasterRead>false</writeRequiresMasterRead>
    <description>Parent policy</description>
</CustomField>